// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PDF loader from file 1`] = `
"_grp: 1
_type: constructor
_id:
  - events
  - input
  - load
  - docs
  - pdf
  - PDFLoader
_kwargs: {}
"
`;

exports[`test PDF loader from file to single document 1`] = `
"_grp: 1
_type: constructor
_id:
  - events
  - input
  - load
  - docs
  - pdf
  - PDFLoader
_kwargs:
  should_split: false
"
`;
